--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "countup.js": "^2.9.0",
         "globals": "^15.14.0",
+        "gsap": "^3.14.2",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
