--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "@radix-ui/react-navigation-menu": "^1.2.5",
         "@radix-ui/react-select": "^2.1.6",
         "@radix-ui/react-separator": "^1.1.2",
-        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-slot": "^1.2.4",
+        "@radix-ui/react-tabs": "^1.1.13",
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
@@ -49,6 +50,7 @@
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
         "countup.js": "^2.9.0",
+        "embla-carousel-react": "^8.6.0",
         "globals": "^15.14.0",
         "gsap": "^3.14.2",
         "input-otp": "^1.4.2",
