--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "$schema": "https://www.schemastore.org/package.json",
     "private": true,
     "type": "module",
+    "packageManager": "pnpm@10.21.0",
     "scripts": {
         "build": "vite build",
         "build:ssr": "vite build && vite build --ssr",
