fix: github actions

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,14 +21,14 @@ jobs:
         with:
           php-version: "8.4"
 
-      - name: Setup Node & pnpm
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+
+      - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "22"
           cache: "pnpm"
-
-      - name: Install pnpm
-        run: corepack enable
 
       - name: Install Dependencies
         run: |
